--- a/processos/Views/Secoes/Index.cshtml
+++ b/processos/Views/Secoes/Index.cshtml
@@ -22,5 +22,6 @@
 <script type="text/javascript">
     jQuery(document).ready(function () {
         Read(10, parseInt(@pag));
+        Delete(10, parseInt(@pag));
     });
 </script>
